[package]
name = "toaster_lib_rs"
version = "0.1.0"
edition = "2024"

[dependencies]

colored = "*"
anyhow = "*"
uuid = "*"

serde = {version = "*", features = ["derive"]}
bytesize = "*"

http = {version = "*"}

ratchet_rs = { version = "*", features = ["deflate", "split"] }
tokio = "*"
log = "*"
bytes = "*"

invoker_auth = {git = "https://github.com/summer-54/invoker_auth.git"}
